<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="285dp"
        android:layout_height="57dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="196dp"
        android:fontFamily="monospace"
        android:text="@string/Title"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/editText_dim"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/labelName"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/editText_dim"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/labelMail"
        app:layout_constraintStart_toStartOf="@+id/outlinedTextName"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextEmailNumber"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/editText_dim"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/labelNumber"
        app:layout_constraintStart_toStartOf="@+id/outlinedTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/button_color"
        android:text="Guardar"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/outlinedTextEmailNumber"
        app:layout_constraintStart_toStartOf="@+id/outlinedTextEmailNumber"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextEmailNumber" />

</androidx.constraintlayout.widget.ConstraintLayout>